--- a/EmergencyFuel/Base.lproj/Main.storyboard
+++ b/EmergencyFuel/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cr7-wE-xsX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="oRt-xh-2wr">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -19,18 +20,32 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uCN-M4-mgX" customClass="EmergencyButton" customModule="EmergencyFuel" customModuleProvider="target">
-                                <rect key="frame" x="288" y="288" width="25" height="25"/>
-                                <color key="backgroundColor" red="0.2483666165176811" green="0.98158766845880652" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="70" y="70" width="460" height="460"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="SEB-U9-ld3"/>
-                                    <constraint firstAttribute="width" constant="25" id="XMz-VF-RrX"/>
+                                    <constraint firstAttribute="width" secondItem="uCN-M4-mgX" secondAttribute="height" multiplier="1:1" id="hNQ-DI-nai"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
-                                <state key="normal" title="Button"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
+                                <state key="normal" title="Find Gas Station">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="disabled">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="selected">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <state key="focused">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="uCN-M4-mgX" secondAttribute="trailing" constant="50" id="VnO-lp-nIo"/>
+                            <constraint firstItem="uCN-M4-mgX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="50" id="fAj-vj-xEK"/>
                             <constraint firstItem="uCN-M4-mgX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mrI-wP-x5a"/>
                             <constraint firstItem="uCN-M4-mgX" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zgP-Jq-rpq"/>
                         </constraints>
@@ -82,7 +97,7 @@
                                                 <constraint firstAttribute="height" constant="24" id="vjG-Em-0kj"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IqR-SW-scl">
@@ -161,6 +176,7 @@
         <!--Navigation Controller-->
         <scene sceneID="8e3-eN-yys">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OTV-In-8r7" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="oRt-xh-2wr" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="tHs-oZ-YMi">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -170,7 +186,6 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="x4s-3w-myg"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OTV-In-8r7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-25" y="1103"/>
         </scene>
