--- a/EmergencyFuel/Base.lproj/Main.storyboard
+++ b/EmergencyFuel/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="oRt-xh-2wr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="oRt-xh-2wr">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -179,8 +179,8 @@
                                 <nil key="highlightedColor"/>
                                 <variation key="default">
                                     <mask key="constraints">
-                                        <exclude reference="pWK-AA-COo"/>
                                         <exclude reference="2m2-Xw-WmZ"/>
+                                        <exclude reference="pWK-AA-COo"/>
                                     </mask>
                                 </variation>
                             </label>
@@ -210,8 +210,8 @@
                                 <nil key="highlightedColor"/>
                                 <variation key="default">
                                     <mask key="constraints">
-                                        <exclude reference="RJx-sp-MQ4"/>
                                         <exclude reference="4iD-Ql-tg3"/>
+                                        <exclude reference="RJx-sp-MQ4"/>
                                     </mask>
                                 </variation>
                             </label>
